--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,10 +554,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #5777ba;
+  border: 1px solid #0dac77;
 }
 .gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #5777ba;
+  background-color: #0dac77;
 }
 .gallery .swiper-slide-active {
   text-align: center;
@@ -567,7 +567,7 @@ section {
     padding: 40px 0;
   }
   .gallery .swiper-slide-active {
-    border: 6px solid #5777ba;
+    border: 6px solid #0dac77;
     padding: 4px;
     background: #fff;
     z-index: 1;
