--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,6 +537,15 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Privacy Policy
+--------------------------------------------------------------*/
+#privacy-policy {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding: 140px 0 100px 0;
+}
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
